; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/mm/extr_fremap.c_populate_range.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/mm/extr_fremap.c_populate_range.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mm_struct = type { i32 }
%struct.vm_area_struct = type { i32 }

@PAGE_SIZE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mm_struct*, %struct.vm_area_struct*, i64, i64, i32)* @populate_range to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @populate_range(%struct.mm_struct* %0, %struct.vm_area_struct* %1, i64 %2, i64 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.mm_struct*, align 8
  %8 = alloca %struct.vm_area_struct*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.mm_struct* %0, %struct.mm_struct** %7, align 8
  store %struct.vm_area_struct* %1, %struct.vm_area_struct** %8, align 8
  store i64 %2, i64* %9, align 8
  store i64 %3, i64* %10, align 8
  store i32 %4, i32* %11, align 4
  br label %13

13:                                               ; preds = %35, %5
  %14 = load %struct.mm_struct*, %struct.mm_struct** %7, align 8
  %15 = load %struct.vm_area_struct*, %struct.vm_area_struct** %8, align 8
  %16 = load i64, i64* %9, align 8
  %17 = load i32, i32* %11, align 4
  %18 = load %struct.vm_area_struct*, %struct.vm_area_struct** %8, align 8
  %19 = getelementptr inbounds %struct.vm_area_struct, %struct.vm_area_struct* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @install_file_pte(%struct.mm_struct* %14, %struct.vm_area_struct* %15, i64 %16, i32 %17, i32 %20)
  store i32 %21, i32* %12, align 4
  %22 = load i32, i32* %12, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %13
  %25 = load i32, i32* %12, align 4
  store i32 %25, i32* %6, align 4
  br label %39

26:                                               ; preds = %13
  %27 = load i64, i64* @PAGE_SIZE, align 8
  %28 = load i64, i64* %10, align 8
  %29 = sub i64 %28, %27
  store i64 %29, i64* %10, align 8
  %30 = load i64, i64* @PAGE_SIZE, align 8
  %31 = load i64, i64* %9, align 8
  %32 = add i64 %31, %30
  store i64 %32, i64* %9, align 8
  %33 = load i32, i32* %11, align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* %11, align 4
  br label %35

35:                                               ; preds = %26
  %36 = load i64, i64* %10, align 8
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %13, label %38

38:                                               ; preds = %35
  store i32 0, i32* %6, align 4
  br label %39

39:                                               ; preds = %38, %24
  %40 = load i32, i32* %6, align 4
  ret i32 %40
}

declare dso_local i32 @install_file_pte(%struct.mm_struct*, %struct.vm_area_struct*, i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
